(follow-up r91518; bug 29658 et al.) Improving RTL support for several extensions: AbuseFilter: aligning rules edit box as LTR, since they are essentially English CodeReview: aligning commit messages according to content language direction; and aligning input boxes on SpecialRepoAdmin as LTR FlaggedRevs: aligning box shown on articles to content language dir; and adding direction marks to ReviewedPages & UnreviewedPages LiquidThreads: * add direction mark * make headings follow the content language dir * remove lqt_post_ltr/rtl (added a few commits ago) to use mw-content-ltr/rtl in core UploadWizard: make calendar input follow user direction (not content direction, as since r91518) (see bug 28902)

--- a/lqt.css
+++ b/lqt.css
@@ -1,10 +1,3 @@
-/* @noflip */.lqt_post_ltr {
-	direction: ltr;
-}
-/* @noflip */.lqt_post_rtl {
-	direction: rtl;
-}
-
 .lqt_watchlist_messages_notice {
 	background-color: #eee;
 	border:           1px solid #ddd;
@@ -188,12 +181,12 @@ body.skin-monobook li#ca-nstab-thread {
 
 .lqt_toc th {
 	border-bottom: 1px solid #000000;
+	text-align: left;
 }
 
 .lqt_toc td,.lqt_toc th {
 	margin: 0;
 	padding: 0.2em;
-	text-align: left;
 }
 
 .lqt_toc td {
